# bedrock_contextual_retrieval

./: .gitignore  README.md  pyproject.toml  requirements.txt
contextual_retrieval/: bm25.py  context_generator.py  embedding_models.py  reranker.py  retriever.py  vector_client.py
contextual_retrieval/config/: __init__.py  default_config.yaml  schema.py
contextual_retrieval/utils/: __init__.py  document_utils.py
tests/: test_search.py
